2016-08-08  Ryosuke Niwa  <rniwa@webkit.org>

        Always show segmentation on v3 charts page
        https://bugs.webkit.org/show_bug.cgi?id=160576

        Rubber-stamped by Chris Dumez.

        Added "Trend Lines" popover to select and customize a moving average or a segmentation to show on charts page
        and made Schwarz criterion segmentation the default trend line for all charts.

        Because computing the segmentation is expensive, we use WebWorker to parallelize the computation via AsyncTask.
        We also compute and cache the segmentation for each cluster separately to avoid processing the entire measurement
        set as that could take 10-20s total, which was a huge problem in v2 UI. v3 UI's approach is more incremental and
        even opens up an opportunity to cache the results in the server side.

        Also brought back "shading" for the confidence interval drawing as done in v1 and v2 UI.

        * public/shared/statistics.js:
        (Statistics.segmentTimeSeriesByMaximizingSchwarzCriterion): Added segmentCountWeight and gridSize as arguments
        to customize the algorithm.
        (Statistics.splitIntoSegmentsUntilGoodEnough): Takes segmentCountWeight as BirgeAndMassartC.

        * public/v3/async-task.js: Added.
        (AsyncTask): Added. This class represents a task such as computing segmentation to be executed in a worker.
        (AsyncTask.prototype.execute): Added. Returns a promise that gets resolved when the specified task completes.
        (AsyncTaskWorker.waitForAvailableWorker): Added. Calls the given callback with the first available worker. When
        all workers are processing some tasks, it waits until one becomes available by putting the callback into a queue.
        _didRecieveMessage pops an item out of this queue when a worker completes a task. We don't use a promise here
        because calling this function multiple times synchronously could result in all the returned promises getting