@@ -1,3 +1,14 @@
+2016-08-09  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Fix a typo that was supposed to be fixed in r204296 before landing.
+
+        * public/v3/pages/chart-pane.js:
+        (ChartPane):
+        (ChartPane.prototype.updateFromSerializedState):
+        (ChartPane.prototype._analyzeRange):
+        (ChartPane.prototype._renderTrendLinePopover):
+        (ChartPane.prototype._trendLineTypeDidChange):
+
 2016-08-08  Ryosuke Niwa  <rniwa@webkit.org>
 
         Always show segmentation on v3 charts page
